Anonymous | Login | 2021-01-26 05:18 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030142 | Community | [OCCT] OCCT:Application Framework | public | 2018-09-17 12:10 | 2019-08-15 17:49 | ||||
Reporter | BenjaminBihler | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | A | OS | L | OS Version | L | ||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030142: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Are Computed During Document Retrieval | ||||||||
Description | Please see https://www.opencascade.com/content/prevent-presentation-update-hidden-labels-during-retrieval. [^] My impression is that the method AfterResume() of TPrsStd_AISPresentation is wrong. It should not call AISUpdate even if the presentation is not displayed at all. | ||||||||
Steps To Reproduce | Create an OCAF document, hide everything by erasing the presentations (but do not remove them), store the document and open it - the presentation drivers will update everything even though it is not displayed. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|
(0079209) git (administrator) 2018-09-17 12:12 |
Branch CR30142 has been created by BenjaminBihler. SHA-1: ee93c35e0f74d01acf5103b26e2c4d868e3cf9d4 Detailed log of new commits: Author: Benjamin Bihler Date: Mon Sep 17 11:11:15 2018 +0200 30142: Hidden Presentations Are Computed During Document Retrieval Removed call to AISUpdate from TPrsStd_AISPresentation::AfterResume(). |
(0079210) BenjaminBihler (developer) 2018-09-17 12:14 |
I was too quick... |
(0079211) git (administrator) 2018-09-17 12:18 |
Branch CR30142 has been updated by BenjaminBihler. SHA-1: cd722716ac94f792e00384cfb8d7c9adbf291148 Detailed log of new commits: Author: Benjamin Bihler Date: Mon Sep 17 11:17:58 2018 +0200 30142: Hidden Presentations Are Computed During Document Retrieval AISUpdate() is only called if the presentation is displayed. |
(0079212) mpv (developer) 2018-09-17 12:41 |
Dear VRO could you check this issue since you have a good vision of the presentations behavior in OCAF. |
(0079244) git (administrator) 2018-09-18 16:24 |
Branch CR30142_1 has been created by vro. SHA-1: db77e74d5d94f43ba658f99035ae9c6b58c5377c Detailed log of new commits: Author: vro Date: Tue Sep 18 16:24:06 2018 +0300 Up-to-date version for current master |
(0079250) vro (developer) 2018-09-19 08:08 |
Tested: http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30142-master-vro/view/COMPARE/. [^] The fix is Ok. Up-to-date version for current master is in CR30142_1 branch, please. |
(0079257) bugmaster (administrator) 2018-09-19 11:05 |
Combination - OCCT branch : CR30142_1 SHA - db77e74d5d94f43ba658f99035ae9c6b58c5377c Products branch : master SHA - f9065a267b8d853b9b62de5a81af9e9e51bc8d26 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17677.699999999695 / 17379.439999999933 [+1.72%] Products Total CPU difference: 7498.140000000048 / 7467.690000000077 [+0.41%] Windows-64-VC14: OCCT Total CPU difference: 17510.363445198505 / 17536.33761169853 [-0.15%] Products Total CPU difference: 8397.783431599997 / 8382.276932199968 [+0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0079518) git (administrator) 2018-09-30 18:47 |
Branch CR30142_1 has been deleted by inv. SHA-1: db77e74d5d94f43ba658f99035ae9c6b58c5377c |
(0079522) git (administrator) 2018-09-30 18:47 |
Branch CR30142 has been deleted by inv. SHA-1: cd722716ac94f792e00384cfb8d7c9adbf291148 |
![]() |
|||
occt: master 39effd08
Timestamp: 2018-09-18 13:24:06 Author: vro Committer: bugmaster [ Details ] [ Diff ] |
0030142: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Are Computed During Document Retrieval | ||
mod - src/TPrsStd/TPrsStd_AISPresentation.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-09-17 12:10 | BenjaminBihler | New Issue | |
2018-09-17 12:10 | BenjaminBihler | Assigned To | => BenjaminBihler |
2018-09-17 12:12 | git | Note Added: 0079209 | |
2018-09-17 12:12 | BenjaminBihler | Assigned To | BenjaminBihler => mpv |
2018-09-17 12:12 | BenjaminBihler | Status | new => resolved |
2018-09-17 12:13 | kgv | Summary | Hidden Presentations Are Computed During Document Retrieval => Application Framework - Hidden Presentations Are Computed During Document Retrieval |
2018-09-17 12:14 | kgv | Summary | Application Framework - Hidden Presentations Are Computed During Document Retrieval => Application Framework, TPrsStd_AISPresentation - Hidden Presentations Are Computed During Document Retrieval |
2018-09-17 12:14 | BenjaminBihler | Note Added: 0079210 | |
2018-09-17 12:14 | BenjaminBihler | Assigned To | mpv => BenjaminBihler |
2018-09-17 12:14 | BenjaminBihler | Status | resolved => assigned |
2018-09-17 12:18 | git | Note Added: 0079211 | |
2018-09-17 12:18 | BenjaminBihler | Assigned To | BenjaminBihler => mpv |
2018-09-17 12:18 | BenjaminBihler | Status | assigned => resolved |
2018-09-17 12:39 | mpv | Assigned To | mpv => vro |
2018-09-17 12:41 | mpv | Note Added: 0079212 | |
2018-09-18 16:24 | git | Note Added: 0079244 | |
2018-09-19 08:08 | vro | Note Added: 0079250 | |
2018-09-19 08:08 | vro | Assigned To | vro => bugmaster |
2018-09-19 08:08 | vro | Status | resolved => reviewed |
2018-09-19 11:05 | bugmaster | Note Added: 0079257 | |
2018-09-19 11:05 | bugmaster | Status | reviewed => tested |
2018-09-30 18:26 | bugmaster | Changeset attached | => occt master 39effd08 |
2018-09-30 18:26 | bugmaster | Status | tested => verified |
2018-09-30 18:26 | bugmaster | Resolution | open => fixed |
2018-09-30 18:47 | git | Note Added: 0079518 | |
2018-09-30 18:47 | git | Note Added: 0079522 | |
2019-04-26 05:58 | abv | Relationship added | related to 0030667 |
2019-08-15 17:49 | bugmaster | Test case number | => Not required |
Copyright © 2000 - 2021 MantisBT Team |