0030142: Application Framework, TPrsStd_AISPresentation - Hidden Presentations Are Computed During Document Retrieval